--- a/calculator/src/index.css
+++ b/calculator/src/index.css
@@ -19,6 +19,13 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 
+/* screen */
+.screen{
+  height: 4rem;
+  margin-bottom: 4rem;
+
+}
+
 /* wrapper */
 .wrapper{
   background: #f6f8f9;
@@ -27,4 +34,30 @@ body{
   margin-top: 4rem;
   border-radius: 1rem;
   box-shadow: 0px 9px 15px -3px rgba(0,0,0,0.1);
+}
+
+/* button box */
+.buttonBox{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+}
+
+/* button */
+.button{
+  background: #e9f0f4;
+  height: 3.5rem;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #242424;
+  border: none;
+  font-size: 1.5rem;
+}
+
+.button:hover {
+  border: 2px dotted #242424;
 }
