--- a/calculator/src/index.css
+++ b/calculator/src/index.css
@@ -58,6 +58,18 @@ body{
   font-size: 1.5rem;
 }
 
+/* button hover */
 .button:hover {
   border: 2px dotted #242424;
+}
+
+/* equals button */
+.equals{
+  background: #4bd086;
+  grid-column: 3/5;
+}
+
+/* operation button */
+.opt {
+  background: #f79505;
 }
