updated and corrected

--- a/src/index.css
+++ b/src/index.css
@@ -1,75 +1,39 @@
-/* importing the google font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
-/* reset the page */
-*{
+/* styling the body tag */
+body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(62deg, #cfdfef 0%, #f0e8f7 100%);
 }
 
-/* body */
-body{
-  height: 100vh;
-  background: #f4f4f4;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto', sans-serif;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-/* screen */
-.screen{
-  height: 4rem;
-  margin-bottom: 4rem;
 
+
+/* styling the scroll bar */
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
 }
 
-/* wrapper */
-.wrapper{
-  background: #f6f8f9;
-  width: 20rem;
-  padding: 2rem;
-  margin-top: 4rem;
-  border-radius: 1rem;
-  box-shadow: 0px 9px 15px -3px rgba(0,0,0,0.1);
-}
-
-/* button box */
-.buttonBox{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 0.5rem;
-}
-
-/* button */
-.button{
-  background: #e9f0f4;
-  height: 3.5rem;
-  padding: 10px;
+::-webkit-scrollbar-thumb {
+  background-color: #f1dda1;
   border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  color: #242424;
-  border: none;
-  font-size: 1.5rem;
+  height: 10px;
 }
 
-/* button hover */
-.button:hover {
-  border: 2px dotted #242424;
-}
 
-/* equals button */
-.equals{
-  background: #4bd086;
-  grid-column: 3/5;
-}
 
-/* operation button */
-.opt {
-  background: #f79505;
+/* using grid layout in calculator buttons */
+/* a specific style to '0' button on Calculator to make it span two colums */
+.card16{
+  grid-column: 1 / 3;
 }
